# Sparerpauschbetrag

./: LICENSE  README.md  pyproject.toml
data/: .gitignore  sample_prices.json  sample_trades.json
scripts/: determine_optimal_sales.py  dkb_trade_data.py
